fix build automation
- fix pip install command
- fix mkdocs file name

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -37,7 +37,7 @@
     opacity: 1;
 }
 
-.md-typeset code, .md-typeset table:not([class]), .md-dialog {
+.md-typeset code, .md-typeset table:not([class]), .md-dialog, .md-version__list {
     border-radius: var(--border-radius);
 }
 
