draft for support-lib support
- fixed build pipeline
- fixed Jinja2 template loading (Replaced Package loader)
- Added basic structure (concept) for C++,C gluecode (support-lib)
- Added logic to copy support-lib code to target output dirs automatically
- added template files (even if empty) in all generators
- fixed MANIFEST.in - include needed resources and exclude docs and tests
- added support to generate objective-c swift bridging header
- documentation improvements:
    - improved landing page structure
    - configured favicon

--- a/src/pydjinni/generator/cpp/cpp/templates/header/record.hpp.jinja2
+++ b/src/pydjinni/generator/cpp/cpp/templates/header/record.hpp.jinja2
@@ -1,6 +1,8 @@
 {% include "base.jinja2" %}
 
-{% for include in type_def.cpp.includes %}
+#pragma once
+
+{% for include in type_def.cpp.includes -%}
 #include {{ include }}
 {% endfor %}
 
@@ -11,7 +13,7 @@ struct {{ type_def.cpp.typename }} final {
     {% endfor %}
 
     {{ type_def.cpp.typename }}(
-        {% for field in type_def.fields %}
+        {% for field in type_def.fields -%}
             {{ field.cpp.typename }} {{ field.cpp.name }}_{{ ", " if not loop.last }}
         {% endfor %})
     :{% for field in type_def.fields %}
@@ -21,7 +23,7 @@ struct {{ type_def.cpp.typename }} final {
 
     {% if config.default_record_constructor %}
         {{ type_def.cpp.typename }}()
-        :{% for field in type_def.fields %}
+        :{% for field in type_def.fields -%}
             {{ ", " if not loop.first }} {{ field.cpp.name }}()
         {% endfor %}
         {}
