Add catch c++ unit testing infrastructure

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -6,6 +6,9 @@
     [data-md-color-scheme=slate] {
         --md-default-bg-color: var(--md-footer-bg-color--dark)
     }
+    [data-md-color-scheme=default] {
+        --md-typeset-a-color: #4051b5;
+    }
 }
 
 .md-typeset h1, .md-typeset h2 {
