generate detailed processed files report; web demo;
- started working on architecture demo
- drafted an awesome demo that executed PyDjinni in the browser
- overhauled generated files reporting: generating a more detailed report (json, yaml or toml) for further processing
- added cli option to do a clean creation. Whipes the related folders first
- started drafting CMake module (rn only documentation)
- added Pygments lexer for IDL files (draft)
- and so much more...

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -4,7 +4,7 @@
 
 @media screen {
     [data-md-color-scheme=slate] {
-        --md-default-bg-color: var(--md-footer-bg-color--dark)
+        --md-default-bg-color: var(--md-footer-bg-color--dark);
     }
     [data-md-color-scheme=default] {
         --md-typeset-a-color: #4051b5;
@@ -172,4 +172,9 @@
     50% {
         background-position: bottom right;
     }
+}
+
+
+[data-md-color-scheme=slate] .invert-in-dark-mode {
+    filter: invert(0.9) hue-rotate(180deg);
 }
