--- a/docs/stylesheets/demo.css
+++ b/docs/stylesheets/demo.css
@@ -6,17 +6,19 @@
     margin: 0;
 }
 
+.generated_listing .filename, #demo_output, .generated_listing code, .md-typeset .rich_text, textarea {
+    line-height: 1.6;
+    font-size: .85em;
+    font-feature-settings: "kern";
+    font-family: var(--md-code-font-family);
+}
+
 .generated_listing code, .md-typeset .rich_text, textarea {
     display: block;
     padding: 10px;
-    font-size: .85em;
-    line-height: 1.6;
-    font-feature-settings: "kern";
-    font-family: var(--md-code-font-family);
     border: 2px solid transparent;
     overflow-y: auto;
 }
-
 
 textarea {
     background: transparent;
@@ -51,10 +53,20 @@ textarea:focus {
     border-color: #ea6d6d;
 }
 
+span.teaser {
+    display: block;
+    text-align: center;
+    opacity: 0.15;
+    line-height: 3;
+}
+
+span.teaser .twemoji {
+    font-size: 3rem;
+}
+
 .generated_listing {
     border-radius: var(--border-radius);
 }
-
 
 .generated_listing code {
     border-radius: 0 0 var(--border-radius) var(--border-radius);
@@ -78,7 +90,6 @@ textarea:focus {
     line-height: 1.6;
 }
 
-
 .rich_editor {
     position: relative;
     display: block;
@@ -98,9 +109,6 @@ textarea:focus {
     border-radius: var(--border-radius) var(--border-radius) 0 0;
     border: 1px solid var(--md-default-fg-color--lightest);
     padding: 6px 10px;
-    font-size: .85em;
-    font-feature-settings: "kern";
-    font-family: var(--md-code-font-family);
     box-shadow: 2px -4px 0 0 var(--md-default-bg-color);
 }
 
@@ -112,9 +120,6 @@ textarea:focus {
     background: var(--md-footer-bg-color);
     margin-bottom: 25px;
     color: var(--md-footer-fg-color);
-    font-size: .85em;
-    font-feature-settings: "kern";
-    font-family: var(--md-code-font-family);
 }
 
 @media screen and (min-width: 960px) {
@@ -129,8 +134,6 @@ textarea:focus {
         max-width: 60%;
         min-width: 60%;
     }
-
-
 
     #demo {
         display: flex;
@@ -177,7 +180,6 @@ textarea:focus {
     }
 }
 
-
 .generated_listing code::-webkit-scrollbar, textarea::-webkit-scrollbar {
     width: 15px;
     height: 15px;
@@ -187,7 +189,6 @@ textarea:focus {
     width: 12px;
 }
 
-/* Track */
 .generated_listing code::-webkit-scrollbar-track, .generated_listing::-webkit-scrollbar-track, textarea::-webkit-scrollbar-track {
     background: transparent;
 }
@@ -198,7 +199,6 @@ textarea:focus {
     border-radius: var(--border-radius);
 }
 
-/* Handle */
 .generated_listing code:hover::-webkit-scrollbar-thumb, textarea:hover::-webkit-scrollbar-thumb {
     background-color: var(--md-default-fg-color--lighter);
     background-clip: padding-box;
@@ -214,7 +214,6 @@ textarea:focus {
     background-clip: padding-box;
 }
 
-/* Handle on hover */
 .generated_listing code::-webkit-scrollbar-thumb:hover, .generated_listing::-webkit-scrollbar-thumb:hover, textarea::-webkit-scrollbar-thumb:hover {
     background: var(--md-default-fg-color--light);
     background-clip: padding-box;
