--- a/src/pydjinni/generator/cpp/cpp/templates/header/enum.hpp.jinja2
+++ b/src/pydjinni/generator/cpp/cpp/templates/header/enum.hpp.jinja2
@@ -1,24 +1,18 @@
-{% include "base.jinja2" %}
+{% extends "base.jinja2" %}
 
+{% block header %}
 #pragma once
+{% endblock %}
 
-#include <functional>
-
-{{ type_def.cpp.comment }}
+{% block content %}
+{{ type_def.cpp.comment}}
 enum class {{ type_def.cpp.typename }} : int {
 {% for item in type_def.items %}
-    {{ item.cpp.comment }}
-    {{ item.cpp.name }},
+    {% if item.comment %}
+    {{ item.cpp.comment | indent(width=4) }}
+    {% endif %}
+    {{ item.cpp.name ~ ("," if not loop.last) }}
 {% endfor %}
 };
 
-namespace std {
-
-template <>
-struct hash<::{{ type_def.cpp.typename }}> {
-    size_t operator()(::{{ type_def.cpp.typename }} type) const {
-        return std::hash<int>()(static_cast<int>(type));
-    }
-};
-
-}  // namespace std
+{% endblock %}
