--- a/src/pydjinni/generator/java/java/templates/source/flags.java.jinja2
+++ b/src/pydjinni/generator/java/java/templates/source/flags.java.jinja2
@@ -1,1 +1,13 @@
-{% include "base.jinja2" %}
+{% extends "base.jinja2" %}
+
+{% block content %}
+{{ type_def.java.comment }}
+public enum {{ type_def.java.boxed }} {
+{% for flag in type_def.flags if not flag.none and not flag.all %}
+    {% if flag.comment %}
+    {{ flag.java.comment | indent(4) }}
+    {% endif %}
+    {{ flag.java.name ~ (";" if loop.last else ",") }}
+{% endfor %}
+}
+{% endblock %}
