--- a/src/pydjinni/generator/java/java/templates/source/enum.java.jinja2
+++ b/src/pydjinni/generator/java/java/templates/source/enum.java.jinja2
@@ -4,7 +4,9 @@
 {{ type_def.java.comment }}
 public enum {{ type_def.java.boxed }} {
 {% for item in type_def.items %}
+    {% if item.comment %}
     {{ item.java.comment | indent(width=4) }}
+    {% endif %}
     {{ item.java.name ~ (";" if loop.last else ",") }}
 {% endfor %}
 }
