--- a/src/pydjinni/generator/java/jni/templates/header/record.hpp.jinja2
+++ b/src/pydjinni/generator/java/jni/templates/header/record.hpp.jinja2
@@ -1,1 +1,36 @@
-{% include "base.jinja2" %}
+{% extends "base.jinja2" %}
+
+{% block header %}
+#pragma once
+
+#include "djinni/jni/support.hpp"
+#include "{{ type_def.jni.header }}"
+{% endblock %}
+
+{% block content %}
+class {{ type_def.jni.translator }} final {
+public:
+    using CppType = {{ type_def.cpp.typename }};
+    using JniType = jobject;
+
+    using Boxed = {{ type_def.jni.translator }};
+
+    ~{{ type_def.jni.translator }}();
+
+    static CppType toCpp(JNIEnv* jniEnv, JniType j);
+    static ::djinni::LocalRef<JniType> fromCpp(JNIEnv * jniEnv, const CppType& c);
+private:
+    {{ type_def.jni.translator }}();
+    friend ::djinni::JniClass<{{ type_def.jni.translator }}>;
+
+    const ::djinni::GlobalRef<jclass> clazz { ::djinni::jniFindClass("{{ type_def.jni.type_signature }}") };
+    const jmethodID jconstructor { ::djinni::jniGetMethodID(clazz.get(), "<init>", "(
+    {%- for field in type_def.fields -%}
+    {{ field.type_ref.type_def.jni.type_signature }}
+    {%- endfor -%}
+    )V") };
+    {% for field in type_def.fields %}
+    const jfieldID field_{{ field.jni.name }} { ::djinni::jniGetFieldID(clazz.get(), "{{ field.java.name }}", "{{ field.type_ref.type_def.jni.type_signature }}") };
+    {% endfor %}
+}
+{% endblock %}
