started working on support-lib and integration testing
- copied code from old support lib
- improved code generation for objc, java
- started setting up integration testing

--- a/src/pydjinni/generator/cpp/cpp/templates/header/record.hpp.jinja2
+++ b/src/pydjinni/generator/cpp/cpp/templates/header/record.hpp.jinja2
@@ -3,8 +3,9 @@
 {% block header %}
 #pragma once
 
+#include <algorithm>
 {% for include in type_def.cpp.includes -%}
-#include {{ include }}
+{{ include_def(include) }}
 {% endfor %}
 {% endblock %}
 
