--- a/src/pydjinni/generator/cpp/cpp/templates/header/interface.hpp.jinja2
+++ b/src/pydjinni/generator/cpp/cpp/templates/header/interface.hpp.jinja2
@@ -2,6 +2,9 @@
 
 {% block header %}
 #pragma once
+{% for include in type_def.cpp.includes -%}
+{{ include_def(include) }}
+{% endfor %}
 {% endblock %}
 
 {% block content %}
@@ -17,7 +20,7 @@ class {{ type_def.cpp.typename }} {
     {%- for parameter in method.parameters -%}
         const {{ parameter.type_ref.type_def.cpp.typename }}& {{ parameter.cpp.name ~ (", " if not loop.last) }}
     {%- endfor -%}
-    ) = 0;
+    ){{ " = 0" if not method.static }};
 {% endfor %}
 };
 {% endblock %}
