--- a/src/pydjinni/generator/objc/objc/templates/header/flags.h.jinja2
+++ b/src/pydjinni/generator/objc/objc/templates/header/flags.h.jinja2
@@ -4,6 +4,7 @@
 
 {% block content %}
 {{ type_def.objc.comment }}
+NS_SWIFT_NAME({{ type_def.objc.swift_typename }})
 typedef NS_OPTIONS(NSUInteger, {{ type_def.objc.boxed }}) {
 {% for flag in type_def.flags %}
     {% if flag.comment %}
