feat: added namespace support
In the IDL file the code can now be structured into
additional namespaces. In theory namespaces can be
nested infinitely, careful use of the feature is recommended though.

- In Java the namespaces are converted to packages
- In C++ the namespaces are convertet to namespaces
- In Objc the namespaces are part of the type name
- In Swift the namespaces are defined as nested types

--- a/src/pydjinni/generator/cpp/cpp/templates/base.jinja2
+++ b/src/pydjinni/generator/cpp/cpp/templates/base.jinja2
@@ -12,7 +12,11 @@
 {% block header %}
 {% endblock %}
 
-namespace {{ config.namespace }} {
+{%- if type_def.cpp.namespace -%}
+namespace {{ type_def.cpp.namespace }} {
+{% endif %}
 {% block content %}
 {% endblock content %}
-}  // namespace {{ config.namespace }}
+{% if type_def.cpp.namespace -%}
+}  // namespace {{ type_def.cpp.namespace }}
+{% endif %}
